feat: make basic layout

--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
     <link rel="stylesheet" href="./styles.css" />
     <title>HTML, CSS & Git Basics</title>
   </head>
-  <body></body>
+  <body class="body">
+    <header class="header"></header>
+    <main class="main"></main>
+    <footer class="footer"></footer>
+  </body>
 </html>
