feat: enlarge fonts

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <title>HTML, CSS & Git Basics</title>
   </head>
   <body class="body">
-    <header class="header"></header>
+    <header class="header">
+      <h1 class="main-heading">Elbek's Resume</h1>
+    </header>
     <main class="main"></main>
-    <footer class="footer"></footer>
+    <footer class="footer">Made with &hearts;</footer>
   </body>
 </html>
