feat: make repsonsive grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,56 @@
     <header class="header">
       <h1 class="main-heading">Elbek's Resume</h1>
     </header>
-    <main class="main"></main>
+    <main class="main">
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
+          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
+          aliquid ad!
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
+          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
+          aliquid ad!
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
+          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
+          aliquid ad!
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
+          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
+          aliquid ad!
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
+          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
+          aliquid ad!
+        </p>
+      </div>
+      <div>
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
+          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
+          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
+          aliquid ad!
+        </p>
+      </div>
+    </main>
     <footer class="footer">Made with &hearts;</footer>
   </body>
 </html>
