feat: add content

--- a/index.html
+++ b/index.html
@@ -10,56 +10,57 @@
     <header class="header">
       <h1 class="main-heading">Elbek's Resume</h1>
     </header>
-    <main class="main">
+    <main class="main container">
       <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
-          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
-          aliquid ad!
-        </p>
+        <h3>Basic info</h3>
+        <p>Elbek Normurodov</p>
+        <p>(ElbekDeveloper)</p>
       </div>
       <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
-          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
-          aliquid ad!
-        </p>
+        <h3>Skills</h3>
+        <ul>
+          <li>Exceptional communication and networking skills;</li>
+          <li>
+            Successful working in a team environment, as well as independently;
+          </li>
+          <li>The ability to work under pressure and multi-task;</li>
+          <li>
+            The ability to follow instructions and deliver quality results;
+          </li>
+        </ul>
       </div>
       <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
-          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
-          aliquid ad!
-        </p>
+        <h3>Code Examples</h3>
+        <a href="#code-examples" class="btn">&downarrow;</a>
       </div>
       <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
-          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
-          aliquid ad!
-        </p>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
-          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
-          aliquid ad!
-        </p>
-      </div>
-      <div>
-        <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Placeat
-          quidem quasi numquam nihil adipisci unde dignissimos, quis architecto
-          nam distinctio! Fugiat cupiditate rem tenetur in, quis ipsum ea
-          aliquid ad!
-        </p>
+        <h3>Education</h3>
+
+        <ul>
+          <li>RSSchool: SEP 2019 - FEB 2020 (No Certificate );</li>
+          <li>C# Programming - CodeCademy Pro</li>
+          <li>Web Development For Everyone (WDFE) - Michigan University</li>
+          <li>
+            Bachelor's - Westminster International University in Tashkent
+            (2018-2022)
+          </li>
+        </ul>
       </div>
     </main>
+    <section class="container" id="code-examples">
+      <code>
+        <pre class="code">
+builder.RegisterType&LeftAngleBracket;InputService&RightAngleBracket;().As&LeftAngleBracket;IInputService&RightAngleBracket;();
+builder.RegisterType&LeftAngleBracket;SqlConnectionAs&LeftAngleBracket;ISqlConnection&RightAngleBracket;();
+builder.RegisterType&LeftAngleBracket;TokenServiceAs&LeftAngleBracket;ITokenService&RightAngleBracket;();
+builder.RegisterType&LeftAngleBracket;SumCalculatorAs&LeftAngleBracket;ISumCalculator&RightAngleBracket;();
+builderRegisterType&LeftAngleBracket;CounterAgentInserterAs&LeftAngleBracket;ICounterAgentInserter&RightAngleBracket;();
+builder.RegisterType&LeftAngleBracket;StandardMessages().As&LeftAngleBracket;IStandardMessages&RightAngleBracket;();
+builder.RegisterType&LeftAngleBracket;SearchFeatureAs&LeftAngleBracket;ISearchFeature&RightAngleBracket;();
+builder.RegisterType&LeftAngleBracket;DeleteRowFeature().As&LeftAngleBracket;IDeleteRow&RightAngleBracket;();</pre
+        >
+      </code>
+    </section>
     <footer class="footer">Made with &hearts;</footer>
   </body>
 </html>
