feat: add connection link

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <main class="main container">
       <div>
         <h3>Basic info</h3>
+        <img
+          src="./assets/profile_pic.jpg"
+          alt="My Picture"
+          class="main--pic"
+        />
         <p>Elbek Normurodov</p>
         <p>(ElbekDeveloper)</p>
       </div>
@@ -44,6 +49,7 @@
             Bachelor's - Westminster International University in Tashkent
             (2018-2022)
           </li>
+          <li>IELTS Band <strong>8</strong></li>
         </ul>
       </div>
     </main>
@@ -98,6 +104,18 @@ builder.RegisterType&LeftAngleBracket;DeleteRowFeature().As&LeftAngleBracket;IDe
         >
       </code>
     </section>
-    <footer class="footer">Made with &hearts;</footer>
+    <footer class="footer">
+      <span>Made with &hearts;</span>
+      <p>
+        Please, visit:
+        <a target="blank" href="https://www.elbek.engineer">my website</a>,
+        <a target="blank" href="https://github.com/ElbekDeveloper/"
+          >my GitHub profile</a
+        >,
+        <a target="blank" href="https://www.youtube.com/DasturlashniOrganamiz"
+          >my YouTube channel</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
